# indian-market-mcp

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  pyproject.toml  test_all_tools.py
src/indian_market_mcp/: __init__.py  server.py
src/indian_market_mcp/sources/: amfi.py  cache.py  mcx.py  nse.py
src/indian_market_mcp/sources/broker/: angel.py  zerodha.py
src/indian_market_mcp/tools/: bonds.py  candlestick.py  commodities.py  currency.py  derivatives.py  etfs.py  financials.py  indices.py  ipo.py  market.py  market_depth.py  mf_analysis.py  mutual_funds.py  news.py  portfolio.py  screener.py  shareholding.py  stocks.py  technicals.py  trading.py
